# eSNN

./: .gitignore  Pipfile  README.md  README.org  __main__.py  alpharunner.py  alphasearch.py  deesweighting.py  environment.yml  mpi_alphasearch.py  mpi_deesweighting.py  mpi_runner.py  plotalphasearch.py  plotembeddings.py  plotfct.py  plotnalpharesearch.py  plotnrealtraininglosses.py  plotnresults.py  plotntraininglosses.py  plotresult.py  plottrainingloss.py  requirements.txt  run_experiments_200.sh  run_experiments_2000.sh  run_mnist.sh  run_mnist_embeddings.sh  runner.py  setup.cfg
dataset/: __init__.py  binarizer.py  dataset.py  dataset_to_cbr.py  dataset_to_sklearn.py  makeTrainingData.py
models/: esnn.py  eval.py  irpropm.py  model_utils.py  rprop.py  type1.py  type2.py  type3.py  type4.py  utils.py
utils/: KerasCallbacks.py  keras_utils.py  plotting.py  runutils.py  storage_utils.py
