
[metadata]
# The globally unique name of your project--though it's common to use the name
# of the Python package in this project, this can be anything.  Just don't use
# a name that already exists in PyPI
name = myCBR python wrapper

# The current version of your project
version = 0.001

# A brief summary of your project--this shows up in PyPI search listings
summary = a wrapper for mycbr REST API and tools for getting UCI ML datasets..
